tests/ui/invalid_deref.ina
// COMPILE_FAIL

fn main() {
    let a = *20;
}
